welcome.lessons.welcome.summative.Moria.scala.code
gauche()
gauche()
while(estFaceMur()!=true){
  if (porteBiscuit()){
    while(!estSurBiscuit){
    }
    recule()
    poseBiscuit()
    gauche()
    gauche()
    avance()
  }else{
    while(!estSurBiscuit()){
     if (estFaceMur()){
        droite()
				avance()
				gauche()
				avance()
       	break
      }else{
        avance()
      }
    }
    prendBiscuit()
    gauche()
    gauche()
  }
}
